<resources>
    <string name="app_name">Wallp.io</string>
    <string name="ad_id_splash">testd7c5cewoj6</string>
    <string name="ad_id_splash_landscape">testq6zq98hecj</string>
    <string name="copyright_info">Copyright 2020. X Technologies Co., Ltd</string>
    <string name="status_load_ad_success">Ad loading state: loaded successfully.</string>
    <string name="status_load_ad_fail">Ad loading state: failed to be loaded. Error code: </string>
    <string name="status_ad_dismissed">Ad is dismissed.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="header_email">AndroidEmail@email.com</string>
    <string name="header_name">Android User</string>
    <string name="home">Home</string>
    <string name="my_profile">My profile</string>
    <string name="my_favorite">My Favorite</string>
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="email">Email</string>
    <string name="please_login">Please login to your account.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username_or_email">Username or Email Address</string>
    <string name="by_signing_up">By Signing up, you agree with our Terms &#38; Conditions</string>
    <string name="favorite_empty">You Have No Favorites Yet.</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="remove_favorite">click to remove favorite</string>

</resources>