<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".loginregister.RegisterActivity">

    <LinearLayout
        android:id="@+id/ll_wrap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/login_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/sign_up_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black_shade_3"
                android:textSize="18sp"
                android:layout_toRightOf="@+id/login_fragment"
                android:layout_marginLeft="30dp"
                />

            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@color/black_shade_3"
                android:layout_toRightOf="@+id/login_fragment"
                android:layout_below="@+id/sign_up_fragment"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            />

        <EditText
            android:id="@+id/et_username_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="text"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="text"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/repeat"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@drawable/black_cursor"
            />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_radius"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:layout_above="@+id/tv_terms"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black_shade_3"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/by_signing_up"
        android:textColor="@color/white"
        />

</RelativeLayout>